--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,8 +8,9 @@
     tools:context=".MainActivity">
 
     <TextView
-        android:layout_width="28dp"
-        android:layout_height="57dp"
+        android:id="@+id/result_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="1"
         android:textSize="30sp" />
